@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3364 2003/09/13 23:03:19 jlam Exp $
+$NetBSD: CHANGES,v 1.3365 2003/09/14 04:58:30 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -3678,3 +3678,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated gtkhtml to 1.1.10 [tron 2003-09-13]
 	Updated fetchmailconf to 6.2.4nb1 [tron 2003-09-13]
 	Updated cyrus-imap21 to 2.1.15 [jlam 2003-09-13]
+	Updated pkg_install to 20030914 [jlam 2003-09-14]
